# mde_oa_eval

./: .gitignore  README.md  generate_insertion_cache.py  license  manual_test_object_insertion.py  paths_default.json  pyproject.toml
docs/: design_decisions.md
experiment_core/: __init__.py  _calculate_losses.py  _data_loading_from_path.py  _depth_predictors.py  _generate_idx_set.py  _load_paths.py  _perfect_predictions.py  _safe_sample_finding.py  _simulate_error.py  _typical_drone.py  _volumetric_loss.py
insertion_specs/: nyuv2_train_realistic_samples.json
test/test_experiment_core/: test_calculate_losses.py  test_depth_predictors.py  test_generate_idx_set.py  test_safe_sample_finding.py  test_simulate_error.py  test_volumetric_loss.py
